# rust-chip8

./: .gitignore  Cargo.toml  Dockerfile
assets/: index.html  serve.sh  style.css  tailwind.config.js
src/: app.rs  application.rs  chip8.rs  lib.rs  main.rs  shader.wgsl  utils.rs  vertex.rs
src/wgpu_runtime/: mod.rs  wgpu_context.rs  wgpu_math.rs
