[package]
name = "chip8"
version = "0.1.0"
authors = ["wesley <wesley@bitechular.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.20"
simple_logger = "4.2.0"
console_log = "1.0.0"
wasm-bindgen = "0.2.84"
wgpu = { version = "0.17.0", features = ["webgl"] }
winit = "0.29.1-beta"
pollster = "0.3.0"
bytemuck = { version = "1.12.3", features = ["derive"] }
instant = { version = "0.1.12", features = ["web-sys", "wasm-bindgen"] }
rand = "0.8.5"

console_error_panic_hook = { version = "0.1.7", optional = true }

#[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "HtmlCanvasElement",
    "CanvasRenderingContext2d", "WorkerNavigator", "GpuUncapturedErrorEvent", "GpuTextureFormat",
    "WebGl2RenderingContext", "Element"] }
wasm-bindgen-futures = "0.4.37"

[profile.release]
opt-level = "s"
